samples/_failures_safe/1761623367_4ed2d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a207de88.c: In function ‘main’:
./samples/SAFE/__tmp_a207de88.c:198:12: error: missing terminating " character
  198 |     printf("Tokens found
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_a207de88.c:198:5: error: expected expression at end of input
  198 |     printf("Tokens found
      |     ^~~~~~
./samples/SAFE/__tmp_a207de88.c:198:5: error: expected declaration or statement at end of input
